# url-shortener

./: Cargo.toml  Dockerfile  README.md  catalog-info.yaml  mkdocs.yml  openapi.yaml
load-test/: load-test.js
src/: main.rs
