[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "39499f4b" }
azure_identity = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "39499f4b" }
azure_data_cosmos = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "39499f4b" }
azure_svc_monitor = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "39499f4b" }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"