[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
chrono = "0.4"
dashmap = "5.3"
futures = { version = "0.3" }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-actix-rustls"] }
tokio = { version = "1", features = ["macros", "time"] }